--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_maps_flutter: ^2.1.1
   google_maps_flutter_web: ^0.3.2+1
   image_picker: ^0.8.4+9
+  pie_chart: ^5.1.0
+  shared_preferences: ^2.0.13
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
