--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2 # Only works with v2
       - uses: subosito/flutter-action@v1
-      - uses: fauzynurn/yuk_vaksin_web
+      - uses: fauzynurn/yuk_vaksin_web@main
         with:
           customArgs: --dart-define=GOOGLE_API_KEY=AIzaSyCvDjDzq302xyCRWAa-Y9z8Bs_yamM1Ex8
           baseHref: /yuk_vaksin_web/
