--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -21,6 +21,8 @@ jobs:
       - run: flutter pub get
       - run: flutter build web --release --dart-define=GOOGLE_API_KEY=${{env.google_api_key}}
       - run: |
+          echo "COMMIT_SECRET: ${{ env.commit_secret }}"
+          echo "GOOGLE_API_KEY: ${{ env.google_api_key }}"
           cd build/web
           git init
           # type configurations: your user.email and user.name followed lines
